# Gamekeeper-Framework

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  README.md  build.sh  format.sh  index.html  params.json
cmake/Compiler/: Clang.cmake  GNU.cmake  GccCompatible.cmake  Intel.cmake
cmake/Crosscompile/: Mingw32bit.cmake
cmake/Modules/: BuildBoost.cmake  BuildCURL.cmake  BuildGTest.cmake  BuildHypodermic.cmake  BuildJSONCpp.cmake  BuildJansson.cmake  BuildSwig.cmake  Buildlog4cpp.cmake  Environment.cmake  FindCSharp.cmake  FindCWidget.cmake  FindGnomeKeyring.cmake  FindHypodermic.cmake  FindJansson.cmake  FindJsoncpp.cmake  FindLibSecret.cmake  FindMono.cmake  FindPatch.cmake  FindPugiXML.cmake  Findlog4cpp.cmake  Macros.cmake  Options.cmake  SetInstallPaths.cmake  UseCSharp.cmake  UseMono.cmake
cmake/Patches/: gtest-mingw.patch  jansson-fix-mingw.patch  log4cpp-mingw.patch
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/: CMakeLists.txt
include/core/: common.h
include/gamekeeper/client/: autowire.h  game.h  gamekeeper.h  gamelib.h  hypodermic.h  store.h  storecontroller.h
include/gamekeeper/core/: bundlepaths.h  common.h  exception.h  filedownloader.h  filedownloaderfactory.h  httpfiledownloader.h  interface.h  logger.h  loggerStream.h  osinformation.h  ospaths.h  packagepaths.h  propertyresolver.h  singleton.h  threadfactory.h  userpaths.h
include/gamekeeper/core/network/: cookie.h  filedownloader.h  filedownloaderfactory.h
include/gamekeeper/model/: game.h  macros.h  platform.h  store.h
include/gamekeeper/model/converter/: gamestringconverter.h
include/gamekeeper/utils/: containerutils.h  stringutils.h
include/gamelib/: gamelib.h
include/gamelib/client/: autowire.h  gamelib.h  hypodermic.h
include/gamelib/core/: common.h  filedownloader.h  httpfiledownloader.h  interface.h  logger.h  loggerStream.h  osinformation.h  ospaths.h
include/gamelib/log/: logger.h
include/gamelib/model/: game.h
include/log/: logger.h
include/std_compat/: mutex  thread
include_private/: CMakeLists.txt
include_private/gamekeeper/backend/: authmanager.h  gamelistparser.h  gnomekeyringmanager.h  httppostloginhandler.h  jsongamelistparser.h  libsecretmanager.h  loginhandler.h  oauthloginhandler.h  storeconfigdata.h  storeconfiguration.h  storeconfigurator.h  storemanager.h  xmlgamelistparser.h
include_private/gamekeeper/client/: gameimpl.h  storecontrollerimpl.h  storeimpl.h
include_private/gamekeeper/core/: boostpopropertyresolver.h  curlfiledownloader.h  curlfiledownloaderfactory.h  curlhelper.h  gnuinstalldirspaths.h  linuxinformation.h  log4cppLogger.h  log4cppLoggerStream.h  log4cpploggerFactory.h  loggerFactory.h  nativethreadhelper.h  portableinstalldirspaths.h  pthreadhelper.h  stdc++11threadmanager.h  threadmanager.h  win32threadhelper.h  windowsinformation.h  xdgpaths.h
include_private/gamekeeper/model/: genericgame.h
include_private/gamelib/core/: abstractinformation.h  curlFileDownloader.h  curlHelper.h  curlfiledownloader.h  curlhelper.h  (+7 more)
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  authmanager.cpp  gnomekeyringmanager.cpp  httppostloginhandler.cpp  jsongamelistparser.cpp  libsecretmanager.cpp  oauthloginhandler.cpp  storeconfiguration.cpp  storeconfigurator.cpp  storemanager.cpp  xmlgamelistparser.cpp
src/backend/security/: generictoken.cpp  libsecretmanager.cpp  token.cpp
src/bindings/: CMakeLists.txt  game.h
src/bindings/csharp/: CMakeLists.txt
src/bindings/java/: CMakeLists.txt
src/bindings/model/: CMakeLists.txt  game.cpp  game.h  game.i  pch.h
src/bindings/model/csharp/: CMakeLists.txt
src/bindings/model/java/: CMakeLists.txt
src/bindings/model/python/: CMakeLists.txt
src/client/: CMakeLists.txt  gameimpl.cpp  gamelib.cpp  gamelib.h  main.cpp  pch.h  runtime.cpp  runtime.h  storecontrollerimpl.cpp  storeimpl.cpp
src/core/: CMakeLists.txt  abstractinformation.cpp  boostpopropertyresolver.cpp  curlFileDownloader.cpp  curlFileDownloader.h  curlHelper.cpp  curlHelper.h  curlfiledownloader.cpp  curlfiledownloaderfactory.cpp  curlhelper.cpp  exception.cpp  filedownloader.cpp  gnuinstalldirspaths.cpp  linuxinformation.cpp  linuxinformation.h  linuxpaths.cpp  linuxpaths.h  log4cppLogger.cpp  log4cppLogger.h  log4cppLoggerStream.cpp  log4cppLoggerStream.h  log4cpploggerFactory.cpp  log4cpploggerFactory.h  logger.cpp  osinformation.cpp  portableinstalldirspaths.cpp  propertiesmissingexception.cpp  pthreadhelper.cpp  stdc++11threadmanager.cpp  userpaths.cpp  win32threadhelper.cpp  windowsinformation.cpp  xdgpaths.cpp  xdgpaths.h
src/core/network/: cookie.cpp  curlfiledownloader.cpp  curlfiledownloaderfactory.cpp  filedownloader.cpp
src/model/: CMakeLists.txt  genericgame.cpp
src/model/bindings/: CMakeLists.txt  game.i  gameBinding.cpp  gameBinding.h
src/model/bindings/java/: CMakeLists.txt
src/model/bindings/python/: CMakeLists.txt
src/model/converter/: gamestringconverter.cpp
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  abstractinformation.cpp  containerutils.cpp  curlfiledownloader.cpp  defaultfixture.cpp  defaultfixture.h  filedownloader.cpp  linuxinformation.cpp  singleton.cpp  stringutils.cpp  webserverfixture.cpp  webserverfixture.h  windowsinformation.cpp  xdgpaths.cpp
tests/libtest/: CMakeLists.txt  defaultfixture.cpp  defaultfixture.h  webserverfixture.cpp  webserverfixture.h
tests/libtest/webserverfiles/: fileWithContentHAHa
tests/prototyping/: CMakeLists.txt
tests/prototyping/curses/: CMakeLists.txt  cursesprototype.cpp  cursesprototype.h
tests/prototyping/desura1/: CMakeLists.txt  desura.ini  desuraprototype.cpp  desuraprototype.h
tests/prototyping/desura1/pugixml/: CMakeLists.txt
tests/prototyping/gameolith1/: CMakeLists.txt  gameolithprototype.cpp  gameolithprototype.h
tests/prototyping/generic1/: CMakeLists.txt  genericprototype.cpp  genericprototype.h
tests/prototyping/hb1/: CMakeLists.txt  game.cpp  game.h  game.i  gameBind.h  hbprototype.cpp  hbprototype.h  hbprototype.py
tests/utils/: CMakeLists.txt  containerutils.cpp
(+6 files in other folders)
